--- a/emissoes globais e stocks de carbono/luiz.ipynb
+++ b/emissoes globais e stocks de carbono/luiz.ipynb
@@ -85,15 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_countries = [\n",
+    "countries = [\n",
     "    \"Brazil\",\n",
     "    \"Argentina\",\n",
     "    \"United States\",\n",
     "    \"China, P.R.: Mainland\",\n",
     "    \"Russian Federation\",\n",
     "    \"India\"\n",
-    "]\n",
-    "\n"
+    "]"
    ]
   },
   {
@@ -123,7 +122,6 @@
     "    \"yellow\"\n",
     "]\n",
     "\n",
-    "\n",
     "to_plot_carbon = df_gr.loc[\n",
     "    (df_gr[\"Unit\"] == \"Millions of Metric tons of CO2\")\n",
     "]\n",
@@ -134,7 +132,7 @@
     "ax.set_title(\"Comparison between Brazil and other countries\")\n",
     "ax.set_ylabel(\"Millions of Metric tons of $CO_2$\")\n",
     "\n",
-    "for col, country in zip(colors, good_countries):\n",
+    "for col, country in zip(colors, countries):\n",
     "    to_plot = to_plot_carbon.query(f\"Country == '{country}'\").T.iloc[3:, 0]\n",
     "    x = pd.to_datetime(to_plot.index.str[1:])\n",
     "    y = to_plot.values\n",
@@ -171,7 +169,7 @@
     "ax.set_ylabel(\"$CO_2$ (Millions of Metric tons) / 1M USD\")\n",
     "\n",
     "\n",
-    "for col, country in zip(colors, good_countries):\n",
+    "for col, country in zip(colors, countries):\n",
     "    to_plot = to_plot_carbon.query(f\"Country == '{country}'\").T.iloc[3:, 0]\n",
     "    x = pd.to_datetime(to_plot.index.str[1:])\n",
     "    y = to_plot.values\n",
@@ -328,7 +326,7 @@
     "ax.set_title(\"Comparison between Brazil and other countries\")\n",
     "ax.set_ylabel(metric_unit)\n",
     "\n",
-    "for col, country in zip(colors, good_countries):\n",
+    "for col, country in zip(colors, countries):\n",
     "    to_plot = to_plot_carbon.query(f\"Country == '{country}'\").T.iloc[3:, 0]\n",
     "    x = pd.to_datetime(to_plot.index.str[1:])\n",
     "    y = to_plot.values\n",
@@ -370,7 +368,7 @@
     "ax.set_ylabel(metric_unit)\n",
     "ax.set_ylim(0, 1)\n",
     "\n",
-    "for col, country in zip(colors, good_countries):\n",
+    "for col, country in zip(colors, countries):\n",
     "    to_plot = to_plot_carbon.query(f\"Country == '{country}'\").T.iloc[3:, :]    \n",
     "    to_plot.rename(columns = dict(zip(to_plot.columns, [metric, metric2])), inplace=True)\n",
     "    x = pd.to_datetime(to_plot.index.str[1:])\n",
@@ -415,7 +413,7 @@
     "ax.set_title(\"Comparison between Brazil and other countries\")\n",
     "ax.set_ylabel(metric_unit)\n",
     "\n",
-    "for col, country in zip(colors, good_countries):\n",
+    "for col, country in zip(colors, countries):\n",
     "    to_plot = to_plot_carbon.query(f\"Country == '{country}'\").T.iloc[3:, :]    \n",
     "    to_plot.rename(columns = dict(zip(to_plot.columns, [metric, metric2])), inplace=True)\n",
     "    x = pd.to_datetime(to_plot.index.str[1:])\n",
