Analises dos graficos de luiz

--- a/emissoes globais e stocks de carbono/luiz.ipynb
+++ b/emissoes globais e stocks de carbono/luiz.ipynb
@@ -141,6 +141,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "66418db8",
+   "metadata": {},
+   "source": [
+    "Gráfico de linhas "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "7ee82e14",
