Analises dos graficos de luiz again

--- a/ECDV2-Carbon_Market.ipynb
+++ b/ECDV2-Carbon_Market.ipynb
@@ -497,6 +497,12 @@
     "\n",
     "- O gráfico \"Percentage of Carbon Tonnes per Area\" revela a relação entre a quantidade de carbono nas florestas e a área territorial do país. Essa série temporal nos permite inferir novamente a posição de destaque do Brasil nesse mercado em crescimento. Nota-se uma distância significativa entre o percentual do Brasil e grandes potências industriais, como os Estados Unidos e a China, sugerindo que o país latino pode se tornar um fornecedor de carbono para essas nações mais industrializadas."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
