--- a/ECDV2-Carbon_Market.ipynb
+++ b/ECDV2-Carbon_Market.ipynb
@@ -726,14 +726,10 @@
     "\n",
     "- No gráfico \"Percentage of Forest Area\", é possível observar a proporção de área florestal em relação ao território dos países. Essa informação pode ser comparada com o gráfico anterior, permitindo compreender a relação entre o tamanho da área florestal de um país e sua influência na produção de carbono.\n",
     "\n",
-    "- O gráfico \"Percentage of Carbon Tonnes per Area\" revela a relação entre a quantidade de carbono nas florestas e a área territorial do país. Essa série temporal nos permite inferir novamente a posição de destaque do Brasil nesse mercado em crescimento. Nota-se uma distância significativa entre o percentual do Brasil e grandes potências industriais, como os Estados Unidos e a China, sugerindo que o país latino pode se tornar um fornecedor de carbono para essas nações mais industrializadas."
+    "- O gráfico \"Percentage of Carbon Tonnes per Area\" revela a relação entre a quantidade de carbono nas florestas e a área territorial do país. Essa série temporal nos permite inferir novamente a posição de destaque do Brasil nesse mercado em crescimento. Nota-se uma distância significativa entre o percentual do Brasil e grandes potências industriais, como os Estados Unidos e a China, sugerindo que o país latino pode se tornar um fornecedor de carbono para essas nações mais industrializadas.\n",
+    "\n",
+    "- No gráfico \"Number of projects by country\", é apresentado o número de projetos de compensação de carbono por país, podendo ser visualizado com éficiencia por meio de gráfico de barras. As cores foram escolhidas com a intenção de dar énfase a diparidades dos valores. Ao analisar o gráfico, podemos notar a os Estados Unidos dominante quanto ao número de projeto de compensação de carbono."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
