--- a/emissoes globais e stocks de carbono/luiz.ipynb
+++ b/emissoes globais e stocks de carbono/luiz.ipynb
@@ -92,7 +92,16 @@
     "    \"China, P.R.: Mainland\",\n",
     "    \"Russian Federation\",\n",
     "    \"India\"\n",
-    "]"
+    "]\n",
+    "\n",
+    "colors = [\n",
+    "    \"purple\",\n",
+    "    \"slateblue\",\n",
+    "    \"lightseagreen\",\n",
+    "    \"mediumseagreen\",\n",
+    "    \"greenyellow\",\n",
+    "    \"yellow\"\n",
+    "]\n"
    ]
   },
   {
@@ -113,14 +122,7 @@
     }
    ],
    "source": [
-    "colors = [\n",
-    "    \"purple\",\n",
-    "    \"slateblue\",\n",
-    "    \"lightseagreen\",\n",
-    "    \"mediumseagreen\",\n",
-    "    \"greenyellow\",\n",
-    "    \"yellow\"\n",
-    "]\n",
+    "\n",
     "\n",
     "to_plot_carbon = df_gr.loc[\n",
     "    (df_gr[\"Unit\"] == \"Millions of Metric tons of CO2\")\n",
@@ -218,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_emissions_id = to_plot_carbon.T.iloc[3:, :].sum().sort_values(ascending=False).head().index"
+    "most_emissions_id = to_plot_carbon.T.iloc[3:, :].sum().sort_values(ascending=False).head().index\n",
+    "ind_list = to_plot_carbon.loc[most_emissions_id, :].Industry.unique()"
    ]
   },
   {
@@ -227,9 +230,7 @@
    "id": "d2ca236a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ind_list = to_plot_carbon.loc[most_emissions_id, :].Industry.unique()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
