--- a/ECDV2-Carbon_Market.ipynb
+++ b/ECDV2-Carbon_Market.ipynb
@@ -728,7 +728,9 @@
     "\n",
     "- O gráfico \"Percentage of Carbon Tonnes per Area\" revela a relação entre a quantidade de carbono nas florestas e a área territorial do país. Essa série temporal nos permite inferir novamente a posição de destaque do Brasil nesse mercado em crescimento. Nota-se uma distância significativa entre o percentual do Brasil e grandes potências industriais, como os Estados Unidos e a China, sugerindo que o país latino pode se tornar um fornecedor de carbono para essas nações mais industrializadas.\n",
     "\n",
-    "- No gráfico \"Number of projects by country\", é apresentado o número de projetos de compensação de carbono por país, podendo ser visualizado com éficiencia por meio de gráfico de barras. As cores foram escolhidas com a intenção de dar énfase a diparidades dos valores. Ao analisar o gráfico, podemos notar a os Estados Unidos dominante quanto ao número de projeto de compensação de carbono."
+    "- No gráfico \"Number of projects by country\", é apresentado o número de projetos de compensação de carbono por país, podendo ser visualizado com éficiencia por meio de gráfico de barras. As cores foram escolhidas com a intenção de dar énfase a diparidades dos valores. Ao analisar o gráfico, podemos notar a os Estados Unidos dominante quanto ao número de projeto de compensação de carbono.\n",
+    "\n",
+    "- No gráfico \"Number of projects per Goal\", é apresentado o número de projetos de compensação de carbono por Objetivo. Onde, ao fazer análisar, é notável que as principais motivações dos projetos são as ações climáticas e industriais, invação e infraestrutura."
    ]
   }
  ],
